--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1"
   },
   "scripts": {
